Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Private/Generate/Export/UNavMovementComponent.h

	
	DOTNET_EXPORT INT_PTR E_NewObject_UNavMovementComponent(UObject* Parent, char* Name)
	{
		return (INT_PTR)NewObject<UNavMovementComponent>(Parent, FName(UTF8_TO_TCHAR(Name)));
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_CanEverCrouch(UNavMovementComponent* Self)
	{
		return Self->CanEverCrouch();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_CanEverFly(UNavMovementComponent* Self)
	{
		return Self->CanEverFly();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_CanEverJump(UNavMovementComponent* Self)
	{
		return Self->CanEverJump();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_CanEverMoveOnGround(UNavMovementComponent* Self)
	{
		return Self->CanEverMoveOnGround();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_CanEverSwim(UNavMovementComponent* Self)
	{
		return Self->CanEverSwim();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_CanStartPathFollowing(UNavMovementComponent* Self)
	{
		return Self->CanStartPathFollowing();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_CanStopPathFollowing(UNavMovementComponent* Self)
	{
		return Self->CanStopPathFollowing();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_ClearFixedBrakingDistance(UNavMovementComponent* Self)
	{
		Self->ClearFixedBrakingDistance();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_GetActorFeetLocation(UNavMovementComponent* Self)
	{
		return (INT_PTR) new FVector(Self->GetActorFeetLocation());
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_GetActorFeetLocationBased(UNavMovementComponent* Self)
	{
		return (INT_PTR) new FBasedPosition(Self->GetActorFeetLocationBased());
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_GetActorLocation(UNavMovementComponent* Self)
	{
		return (INT_PTR) new FVector(Self->GetActorLocation());
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_GetActorNavLocation(UNavMovementComponent* Self)
	{
		return (INT_PTR) new FVector(Self->GetActorNavLocation());
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_GetPathFollowingBrakingDistance(UNavMovementComponent* Self, float MaxSpeed)
	{
		auto _p0 = MaxSpeed;
		return Self->GetPathFollowingBrakingDistance(_p0);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_IsCrouching(UNavMovementComponent* Self)
	{
		return Self->IsCrouching();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_IsFalling(UNavMovementComponent* Self)
	{
		return Self->IsFalling();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_IsFlying(UNavMovementComponent* Self)
	{
		return Self->IsFlying();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_IsJumpAllowed(UNavMovementComponent* Self)
	{
		return Self->IsJumpAllowed();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_IsMovingOnGround(UNavMovementComponent* Self)
	{
		return Self->IsMovingOnGround();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_IsSwimming(UNavMovementComponent* Self)
	{
		return Self->IsSwimming();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_RequestDirectMove(UNavMovementComponent* Self, INT_PTR MoveVelocity, bool bForceMaxSpeed)
	{
		auto _p0 = *(FVector*)MoveVelocity;
		auto _p1 = bForceMaxSpeed;
		Self->RequestDirectMove(_p0, _p1);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_RequestPathMove(UNavMovementComponent* Self, INT_PTR MoveInput)
	{
		auto _p0 = *(FVector*)MoveInput;
		Self->RequestPathMove(_p0);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_ResetMoveState(UNavMovementComponent* Self)
	{
		Self->ResetMoveState();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_SetFixedBrakingDistance(UNavMovementComponent* Self, float DistanceToEndOfPath)
	{
		auto _p0 = DistanceToEndOfPath;
		Self->SetFixedBrakingDistance(_p0);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_SetJumpAllowed(UNavMovementComponent* Self, bool bAllowed)
	{
		auto _p0 = bAllowed;
		Self->SetJumpAllowed(_p0);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_SetUpdateNavAgentWithOwnersCollisions(UNavMovementComponent* Self, bool bUpdateWithOwner)
	{
		auto _p0 = bUpdateWithOwner;
		Self->SetUpdateNavAgentWithOwnersCollisions(_p0);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_ShouldUpdateNavAgentWithOwnersCollision(UNavMovementComponent* Self)
	{
		return Self->ShouldUpdateNavAgentWithOwnersCollision();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_StopActiveMovement(UNavMovementComponent* Self)
	{
		Self->StopActiveMovement();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_StopMovementImmediately(UNavMovementComponent* Self)
	{
		Self->StopMovementImmediately();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_StopMovementKeepPathing(UNavMovementComponent* Self)
	{
		Self->StopMovementKeepPathing();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_UseAccelerationForPathFollowing(UNavMovementComponent* Self)
	{
		return Self->UseAccelerationForPathFollowing();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_AddRadialForce(UNavMovementComponent* Self, INT_PTR Origin, float Radius, float Strength, ERadialImpulseFalloff Falloff)
	{
		auto _p0 = *(FVector*)Origin;
		auto _p1 = Radius;
		auto _p2 = Strength;
		auto _p3 = Falloff;
		Self->AddRadialForce(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_AddRadialImpulse(UNavMovementComponent* Self, INT_PTR Origin, float Radius, float Strength, ERadialImpulseFalloff Falloff, bool bVelChange)
	{
		auto _p0 = *(FVector*)Origin;
		auto _p1 = Radius;
		auto _p2 = Strength;
		auto _p3 = Falloff;
		auto _p4 = bVelChange;
		Self->AddRadialImpulse(_p0, _p1, _p2, _p3, _p4);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_ComputeSlideVector(UNavMovementComponent* Self, INT_PTR Delta, float Time, INT_PTR Normal, INT_PTR Hit)
	{
		auto _p0 = *(FVector*)Delta;
		auto _p1 = Time;
		auto _p2 = *(FVector*)Normal;
		auto _p3 = *(FHitResult*)Hit;
		return (INT_PTR) new FVector(Self->ComputeSlideVector(_p0, _p1, _p2, _p3));
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_ConstrainDirectionToPlane(UNavMovementComponent* Self, INT_PTR Direction)
	{
		auto _p0 = *(FVector*)Direction;
		return (INT_PTR) new FVector(Self->ConstrainDirectionToPlane(_p0));
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_ConstrainLocationToPlane(UNavMovementComponent* Self, INT_PTR Location)
	{
		auto _p0 = *(FVector*)Location;
		return (INT_PTR) new FVector(Self->ConstrainLocationToPlane(_p0));
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_ConstrainNormalToPlane(UNavMovementComponent* Self, INT_PTR Normal)
	{
		auto _p0 = *(FVector*)Normal;
		return (INT_PTR) new FVector(Self->ConstrainNormalToPlane(_p0));
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_Deactivate(UNavMovementComponent* Self)
	{
		Self->Deactivate();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_GetGravityZ(UNavMovementComponent* Self)
	{
		return Self->GetGravityZ();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_GetMaxSpeed(UNavMovementComponent* Self)
	{
		return Self->GetMaxSpeed();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_GetMaxSpeedModifier(UNavMovementComponent* Self)
	{
		return Self->GetMaxSpeedModifier();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_GetModifiedMaxSpeed(UNavMovementComponent* Self)
	{
		return Self->GetModifiedMaxSpeed();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_GetPenetrationAdjustment(UNavMovementComponent* Self, INT_PTR Hit)
	{
		auto _p0 = *(FHitResult*)Hit;
		return (INT_PTR) new FVector(Self->GetPenetrationAdjustment(_p0));
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_HandleImpact(UNavMovementComponent* Self, INT_PTR Hit, float TimeSlice, INT_PTR MoveDelta)
	{
		auto _p0 = *(FHitResult*)Hit;
		auto _p1 = TimeSlice;
		auto _p2 = *(FVector*)MoveDelta;
		Self->HandleImpact(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_InitializeComponent(UNavMovementComponent* Self)
	{
		Self->InitializeComponent();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_IsExceedingMaxSpeed(UNavMovementComponent* Self, float MaxSpeed)
	{
		auto _p0 = MaxSpeed;
		return Self->IsExceedingMaxSpeed(_p0);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_IsInWater(UNavMovementComponent* Self)
	{
		return Self->IsInWater();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_K2_GetMaxSpeedModifier(UNavMovementComponent* Self)
	{
		return Self->K2_GetMaxSpeedModifier();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_K2_GetModifiedMaxSpeed(UNavMovementComponent* Self)
	{
		return Self->K2_GetModifiedMaxSpeed();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_MoveUpdatedComponentImpl(UNavMovementComponent* Self, INT_PTR Delta, INT_PTR NewRotation, bool bSweep, INT_PTR OutHit, ETeleportType Teleport)
	{
		auto _p0 = *(FVector*)Delta;
		auto _p1 = *(FQuat*)NewRotation;
		auto _p2 = bSweep;
		auto _p3 = (FHitResult*)OutHit;
		auto _p4 = Teleport;
		return ((E_PROTECTED_WRAP_UNavMovementComponent*)Self)->MoveUpdatedComponentImpl_WRAP(_p0, _p1, _p2, _p3, _p4);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_OnRegister(UNavMovementComponent* Self)
	{
		Self->OnRegister();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_OnTeleported(UNavMovementComponent* Self)
	{
		Self->OnTeleported();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_PostLoad(UNavMovementComponent* Self)
	{
		Self->PostLoad();
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_RegisterComponentTickFunctions(UNavMovementComponent* Self, bool bRegister)
	{
		auto _p0 = bRegister;
		Self->RegisterComponentTickFunctions(_p0);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_ResolvePenetrationImpl(UNavMovementComponent* Self, INT_PTR Adjustment, INT_PTR Hit, INT_PTR NewRotation)
	{
		auto _p0 = *(FVector*)Adjustment;
		auto _p1 = *(FHitResult*)Hit;
		auto _p2 = *(FQuat*)NewRotation;
		return ((E_PROTECTED_WRAP_UNavMovementComponent*)Self)->ResolvePenetrationImpl_WRAP(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_SetPlaneConstraintAxisSetting(UNavMovementComponent* Self, EPlaneConstraintAxisSetting NewAxisSetting)
	{
		auto _p0 = NewAxisSetting;
		Self->SetPlaneConstraintAxisSetting(_p0);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_SetPlaneConstraintEnabled(UNavMovementComponent* Self, bool bEnabled)
	{
		auto _p0 = bEnabled;
		Self->SetPlaneConstraintEnabled(_p0);
	}
	DOTNET_EXPORT auto E_UNavMovementComponent_SetPlaneConstraintFromVectors(UNavMovementComponent* Self, INT_PTR Forward, INT_PTR Up)
	{
		auto _p0 = *(FVector*)Forward;
		auto _p1 = *(FVector*)Up;
		Self->SetPlaneConstraintFromVectors(_p0, _p1);
	}